# real-estate-server

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYTICS_GUIDE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_SUMMARY.md  generate_coverage.py  main.py  pyproject.toml  requirements.txt  run_server.sh  setup_dev.sh  start.py  update_username.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/app/: README.md  __init__.py  main.py
src/app/api/: deps.py
src/app/api/v1/: README.md  routes_cache.py  routes_market.py  routes_misc.py  routes_pdf.py  routes_rates.py
src/app/core/: README.md  config.py  deps.py  logging.py  security.py
src/app/domain/: README.md  __init__.py  calc.py  finance.py  market_stats.py  market_utils.py  proimobil_models.py  rates_utils.py
src/app/models/: __init__.py
src/app/schemas/: __init__.py  market.py  pdf.py  rates.py
src/app/scraping/: README.md  accesimobil.py  md999.py  proimobil.py  proimobil_api.py
src/app/services/: README.md  cache.py  calc_service.py  histogram.py  market_analytics.py  market_service.py  proimobil_analytics.py  proimobil_api_service.py  quartile_analysis.py  rates.py  rates_service.py
src/app/services/pdf/: __init__.py  pdf_service.py
src/app/templates/: report.html  sale_summary.html
tests/: test_999md.py  test_accesimobil_extended.py  test_analytics.py  test_api.py  test_cache.py  test_calc.py  test_calc_extended.py  test_histogram.py  test_market_router_extended.py  test_market_utils.py  test_pdf_endpoints.py  test_pdf_service.py  test_proimobil_api.py  test_proimobil_extended.py  test_quartile_analysis.py  test_quartile_analysis_extended.py  test_rates_utils.py  test_routers_extended.py  test_scrapers.py  test_settings.py
